Enhance Redis chaos testing framework with additional tests and functionality:
- Introduced `ManualChaosTestRunner` for interactive chaos testing.
- Implemented new performance testing scenarios and failover handling.
- Improved Redis cluster info retrieval with enhanced fallback support.
- Updated configurations to standardize `redis.localhost` references.
- Extended `.gitignore` for better project-specific ignores.
- Added `run-chaos-tests.sh` script for automated and manual test execution.